--- a/templates/admin/sport_competitors.html
+++ b/templates/admin/sport_competitors.html
@@ -43,8 +43,10 @@
                 {% endif %}
             </td>
             <td>
-                <a href="/competitor/{{ c.callsign }}" class="btn">View</a>
-                <button onclick="disqualifyCompetitor('{{ c.callsign }}')" class="btn btn-danger">Disqualify</button>
+                <div class="btn-group">
+                    <a href="/competitor/{{ c.callsign }}" class="btn btn-sm btn-icon" title="View"><span class="icon">👤</span></a>
+                    <button onclick="disqualifyCompetitor('{{ c.callsign }}')" class="btn btn-sm btn-icon btn-danger" title="Disqualify"><span class="icon">🚫</span></button>
+                </div>
             </td>
         </tr>
         {% endfor %}
