--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -16,7 +16,7 @@
             <label for="callsign">Callsign</label>
             <input type="text" id="callsign" name="callsign" required placeholder="W1ABC" style="text-transform: uppercase;">
         </div>
-        <button type="submit" class="btn">Send Reset Email</button>
+        <button type="submit" class="btn btn-success"><span class="icon">📧</span> Send Reset Email</button>
     </form>
     <div id="forgot-result"></div>
     {% endif %}
