--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                 {% if sport.activate_enabled %}Activate{% endif %}
                 {% if sport.separate_pools %} (separate pools){% endif %}
             </td>
-            <td><a href="/olympiad/sport/{{ sport.id }}" class="btn">View</a></td>
+            <td><a href="/olympiad/sport/{{ sport.id }}" class="btn btn-sm"><span class="icon">👁️</span> View</a></td>
         </tr>
         {% endfor %}
     </tbody>
