--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -23,7 +23,7 @@
             <label for="confirm_password">Confirm Password</label>
             <input type="password" id="confirm_password" name="confirm_password" required minlength="8">
         </div>
-        <button type="submit" class="btn">Reset Password</button>
+        <button type="submit" class="btn btn-success"><span class="icon">🔒</span> Reset Password</button>
     </form>
     <div id="reset-result"></div>
     {% endif %}
