--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" name="password" required>
         </div>
-        <button type="submit" class="btn">Log In</button>
+        <button type="submit" class="btn btn-success"><span class="icon">🔑</span> Log In</button>
     </form>
     <div id="login-result"></div>
     <p style="margin-top: 15px;">Don't have an account? <a href="/signup">Sign up</a></p>
