--- a/templates/message.html
+++ b/templates/message.html
@@ -16,7 +16,7 @@
     <p>{{ message }}</p>
 
     <div style="margin-top: 30px;">
-        <a href="/dashboard" class="btn">Go to Dashboard</a>
+        <a href="/dashboard" class="btn"><span class="icon">📊</span> Go to Dashboard</a>
     </div>
 </div>
 {% endblock %}
